<resources>
    <string name="app_name">MockUpSouthscape</string>
    <string name="title_activity_placeholder">PlaceholderActivity</string>
    <string name="title_activity_login">SouthscapersApp</string>
    <string name="title_activity_main">Main Activity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_get_detail">Get User Detail</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to authentication -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="auth_type">id.co.reich.auth_southscapers</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- Strings related to drawer -->
    <string name="drawer_home">Home</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_login">Sign in</string>
    <string name="title_activity_event_tabbed">EventTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to events -->
    <string name="title_event_name">Event Name</string>
    <string name="title_event_type">Event Type</string>
    <string name="title_event_time">Event Time</string>
    <string name="title_event_place">Event Place</string>

    <!-- Strings related to payments and bills -->
    <string name="title_payment_session">Payment Session</string>
    <string name="content_payment_session">Session of Payment</string>
    <string name="title_payment_type">Payment Type</string>
    <string name="content_payment_type">Type of Payment</string>
    <string name="title_payment_status">Verification Status</string>
    <string name="content_payment_status">Status of Verification</string>
    <string name="title_payment_submit_date">Submit Date</string>
    <string name="content_submission_date">Date of Submission</string>
    <string name="title_payment_verified_date">Verified Date</string>
    <string name="content_payment_verified_date">Date of Verification</string>
    <string name="title_payment_rejection_cause">Rejection Cause</string>
    <string name="content_payment_rejection_cause">Cause of Rejection</string>
    <string name="title_payment_transfer_text">Transfer Text</string>
    <string name="content_payment_transfer_text">Text of Transfer Proof</string>
    <string name="title_take_picture">Take Photo from Camera or Gallery</string>
    <string name="title_btn_submit_payment">Submit Payment</string>
    <string name="title_payment_verification_status">Verification Status</string>
    <string name="content_payment_verification_status">Status of Verification</string>
    <string name="title_activity_payment_tabbed">PaymentTabbedActivity</string>
    <string name="title_submit_payment">Submit Payment</string>

    <!-- Strings related to utils -->
    <string name="pick_image_intent_text">Choose Source</string>
</resources>
